<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter Client</string>

    <!-- Action bar related strings -->
    <string name="action_compose">Compose a tweet</string>
    <string name="action_refresh">Refresh the timeline</string>
    <string name="action_profile">Display user\'s profile</string>
    <string name="tabHome">Home</string>
    <string name="tabMentions">Mentions</string>
    
    <string name="nb_followers_suffix">Follower(s)</string>
    <string name="nb_following_suffix">Following</string>
    
    <string name="login_label">Log in</string>
    <string name="title_activity_timeline"></string>
    <string name="title_activity_compose">Compose Tweet</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnTweet">Tweet</string>
    <string name="compose_tweet">Enter your tweet</string>
    <string name="count_char_left">140 character(s) left</string>
    <string name="timeline_refresh">Refreshing your timeline...</string>
    <string name="internet_unavailable">The Internet connection isn\'t available. Loading your previous timeline</string>
    <string name="timeline_refresh_action_impossible">The Internet connection isn\'t available so the timeline can\'t be refreshed.</string>
    <string name="compose_action_impossible">The Internet connection isn\'t available so you can\'t compose a new tweet at this time.</string>
    <string name="profile_action_impossible">The Internet connection isn\'t available so you can\'t access your profile at this time.</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>