<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="100"
        android:onClick="onRefreshAction"
        android:showAsAction="always"
        android:title="@string/action_refresh"/>
    
    <item
        android:id="@+id/action_compose"
        android:icon="@drawable/ic_action_compose"
        android:orderInCategory="200"
        android:onClick="onComposeAction"
        android:showAsAction="always"
        android:title="@string/action_compose"/>
    
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_action_profile"
        android:orderInCategory="300"
        android:onClick="onProfileAction"
        android:showAsAction="always"
        android:title="@string/action_profile"/>

</menu>
